# genesis-device

./: .gitignore  index.html  notes.md  package-lock.json  package.json  vite.config.ts
src/: main.ts
src/render/: AtlasTriplanarPBR.ts  TerrainMesh.ts  TerrainTileMeshes.ts  TriplanarPBR.ts  WaterRenderer.ts  scatter.ts
src/terrain/: Biomes.ts  HeightField.ts  LevelStep.ts  TerrainPipeline.ts  WasmTerrainGenerator.ts  masks.ts  types.ts
src/terrain/erosion/: HydroErosion.ts
src/terrain/filters/: Dunes.ts  FBMNoise.ts  GeologicalErosion.ts  RidgeSharpen.ts  SlopeBlur.ts  WaterSystem.ts
src/terrain/tiles/: ContinuousTileGeneration.ts  TileStreaming.ts
wasm-terrain/: Cargo.toml  build.sh
wasm-terrain/src/: biomes.rs  erosion.rs  filters.rs  height_field.rs  lib.rs  noise.rs  utils.rs  water_system.rs
